{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 64,
  "lineage": "18cdaf9f-349a-8b4f-7492-5d921d24591c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:security-group/sg-0bb7342d0945ec81d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bb7342d0945ec81d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20210207140440203500000008",
            "name_prefix": "all_worker_management",
            "owner_id": "383869057090",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:security-group/sg-0c54d32faa5dea467",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c54d32faa5dea467",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20210207140445284200000009",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "383869057090",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:security-group/sg-0e403296d502a2baf",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e403296d502a2baf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0247c64b2351b02a9"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "stravinskaiteg-eks-hacalculator2021020714044531130000000a",
            "name_prefix": "stravinskaiteg-eks-hacalculator",
            "owner_id": "383869057090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stravinskaiteg-eks-hacalculator-eks_cluster_sg",
              "Owner": "stravinskaiteg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:security-group/sg-0247c64b2351b02a9",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0247c64b2351b02a9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e403296d502a2baf"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e403296d502a2baf"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "stravinskaiteg-eks-hacalculator2021020714044543410000000b",
            "name_prefix": "stravinskaiteg-eks-hacalculator",
            "owner_id": "383869057090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stravinskaiteg-eks-hacalculator-eks_worker_sg",
              "Owner": "stravinskaiteg",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3626388537",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e403296d502a2baf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-43355773",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e403296d502a2baf",
            "self": false,
            "source_security_group_id": "sg-0247c64b2351b02a9",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1336224343",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0247c64b2351b02a9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1654901354",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0247c64b2351b02a9",
            "self": false,
            "source_security_group_id": "sg-0e403296d502a2baf",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-76859376",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0247c64b2351b02a9",
            "self": false,
            "source_security_group_id": "sg-0e403296d502a2baf",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2679161223",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0247c64b2351b02a9",
            "self": false,
            "source_security_group_id": "sg-0247c64b2351b02a9",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-064b8b8c4e46b8b32",
            "domain": "vpc",
            "id": "eipalloc-01c771c6ab06017a6",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-096bc2d9c26a23149",
            "private_dns": "ip-10-0-4-13.eu-west-2.compute.internal",
            "private_ip": "10.0.4.13",
            "public_dns": "ec2-52-56-74-233.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.74.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-eu-west-2a",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:internet-gateway/igw-0aff42e0a530d2ef4",
            "id": "igw-0aff42e0a530d2ef4",
            "owner_id": "383869057090",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c771c6ab06017a6",
            "id": "nat-0fac452f6ab9b4c20",
            "network_interface_id": "eni-096bc2d9c26a23149",
            "private_ip": "10.0.4.13",
            "public_ip": "52.56.74.233",
            "subnet_id": "subnet-0b59842a69690ed1e",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-eu-west-2a",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6029d17b2cbb48c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fac452f6ab9b4c20",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6029d17b2cbb48c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aff42e0a530d2ef4",
            "id": "r-rtb-0b56222054e9c8bb61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b56222054e9c8bb6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f6029d17b2cbb48c",
            "owner_id": "383869057090",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fac452f6ab9b4c20",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-private",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b56222054e9c8bb6",
            "owner_id": "383869057090",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aff42e0a530d2ef4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-public",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f99dccca487de31f",
            "route_table_id": "rtb-0f6029d17b2cbb48c",
            "subnet_id": "subnet-0dd755199fa5a9e57"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d254bc8c6c1ccc9f",
            "route_table_id": "rtb-0f6029d17b2cbb48c",
            "subnet_id": "subnet-09d8ee086638840e3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1846b3459c6ce6e",
            "route_table_id": "rtb-0f6029d17b2cbb48c",
            "subnet_id": "subnet-05031d59c55dd2494"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f29867a0ed039a5",
            "route_table_id": "rtb-0b56222054e9c8bb6",
            "subnet_id": "subnet-0b59842a69690ed1e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0029a0f1f8376a008",
            "route_table_id": "rtb-0b56222054e9c8bb6",
            "subnet_id": "subnet-076db635828a33f74"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f9a62db9a434243",
            "route_table_id": "rtb-0b56222054e9c8bb6",
            "subnet_id": "subnet-09a50141aee656c3b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:subnet/subnet-0dd755199fa5a9e57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dd755199fa5a9e57",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383869057090",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:subnet/subnet-09d8ee086638840e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09d8ee086638840e3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383869057090",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:subnet/subnet-05031d59c55dd2494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-05031d59c55dd2494",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383869057090",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:subnet/subnet-0b59842a69690ed1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b59842a69690ed1e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383869057090",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:subnet/subnet-076db635828a33f74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-076db635828a33f74",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383869057090",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:subnet/subnet-09a50141aee656c3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-09a50141aee656c3b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "383869057090",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07485a43d5dbc7415"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:383869057090:vpc/vpc-07485a43d5dbc7415",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fe1156cf2a8b3bd",
            "default_route_table_id": "rtb-0ee11f48b32b4fd7c",
            "default_security_group_id": "sg-07b3e8fcd3a84320c",
            "dhcp_options_id": "dopt-408b6629",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07485a43d5dbc7415",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ee11f48b32b4fd7c",
            "owner_id": "383869057090",
            "tags": {
              "Name": "stravinskaiteg-eks-vpc",
              "kubernetes.io/cluster/stravinskaiteg-eks-hacalculator": "shared"
            }
          }
        }
      ]
    }
  ]
}